GitVersion1/objects/Competitors__c.object
<CustomObject>
    <fields>
        <fullName>Account_Standard_Commercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Commercial Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Competitors_Third_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFE_Conversion_Factor__c</fullName>
        <formula>Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFE Conversion Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFE_Shipments_NDA__c</fullName>
        <formula>Null</formula>
        <label>CFE Shipments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFE_Shipments__c</fullName>
        <description>Predicted Competitor A Shipments * CFE Conversion Factor</description>
        <formula>Predicted_Shipments__c * CFE_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Predicted Competitor A Shipments * CFE Conversion Factor</inlineHelpText>
        <label>CFE Shipments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <formula>Competitor__r.Name</formula>
        <label>Competitor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked With - Related Accounts</relationshipLabel>
        <relationshipName>Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contribution_Cg__c</fullName>
        <formula>Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Cg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution_NDA__c</fullName>
        <formula>Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <formula>Contribution_Cg__c * Predicted_Shipments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT__c</fullName>
        <label>Currency / MT (CFE)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only use this field if you are relating Competitors to an Opportunity.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Competitors_ThirdParties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <formula>CASESAFEID(Account_Standard_Commercial__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <formula>Account_Standard_Commercial__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <formula>Account_Standard_Commercial__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predicted_Shipments__c</fullName>
        <description>MT from Estimates</description>
        <label>Predicted Shipments</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <formula>Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <label>Share (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Third Party</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>((1 OR 2 OR 3) AND 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Third Party</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Hatchery, Competitor Dealer, Food Processing Plant, Other Third Par, Milk Processing, Slaughterhouse - Beef, Slaughterhouse - Broiler, Slaughterhouse - Broiler &amp; Turkey, Slaughterhouse - Waterfowl, Slaughterhouse - Turkey, Slaughterhouse - Pork</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Slaughterhouse - Ducks, Slaughterhouse -  Geese, Slaughterhouse - Multi Specie</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts (Third Party)</relationshipLabel>
        <relationshipName>Competitors_Third_Parties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tonnes_Supplied__c</fullName>
        <label>Tonnes Supplied</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Animals__c</fullName>
        <label>Total Animals (outside source)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Competitor__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Standard_Commercial__c</columns>
        <columns>Third_Party__c</columns>
        <columns>Main__c</columns>
        <columns>Share__c</columns>
        <columns>Competitor__c</columns>
        <columns>Competitor_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Related Accounts No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Accounts</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <description>For adding Third Party on Accounts</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <description>Adding related Competitors to an Opportunity</description>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_and_Related_Account_NOT_Same</fullName>
        <active>true</active>
        <description>Parent and Related Account cannot be same</description>
        <errorConditionFormula>Account_Standard_Commercial__r.Id ==  Competitor__r.Id</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>Parent and Related To accounts can&apos;t be same. Please relate a different Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Type_cannot_be_same</fullName>
        <active>false</active>
        <description>Record Type of Parent and Related Record cannot be same</description>
        <errorConditionFormula>Account_Standard_Commercial__r.RecordType.Name ==  Competitor__r.RecordType.Name</errorConditionFormula>
        <errorDisplayField>Competitor__c</errorDisplayField>
        <errorMessage>Record Type of Parent and Related Account can&apos;t be same. Please select a different Record Type Account.</errorMessage>
    </validationRules>
</CustomObject>